# ml-ignite-bootcamp_v2

./: .python-version  pyproject.toml
01-regression/: 01-Lecture-SupervisedLearning.ipynb  02-Linear_Regression.ipynb  03-Preprocessing-workflow.ipynb
01-regression/.ipynb_checkpoints/: 01-Supervised Learning - Regression-checkpoint.ipynb
01-regression/sol/: 02-Linear_Regression.ipynb
02-classification/: 01-Lecture-SupLearning-Classification.ipynb  02-Electrocardiograms.ipynb
02-classification/sol/: 02-Electrocardiograms-solution.ipynb
