[tool.poetry]
name = "ml-ignite-bootcamp"
version = "0.1.0"
description = ""
authors = ["Renan Moises <renanfmoises@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
jupyter = "^1.1.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
